# grpc-astra-minimal

./: .gitignore
apps/test/: CMakeLists.txt  Makefile  README.md  echo_client.hpp  greeter_client.hpp
apps/test/src/: echo_client.cpp  greeter_client.cpp  main.cpp
cmake/: GrpcTargets.cmake  Macros.cmake
microservices/echo_service/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  Makefile  README.md  echo_service.hpp
microservices/echo_service/src/: echo_service.cpp  main.cpp
microservices/greeter_service/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  greeter_service.cpp  greeter_service.hpp
microservices/greeter_service/.cache/clangd/index/: GreeterService.cpp.C5FA433A6BE8BFCB.idx  GreeterService.hpp.AE7AA9902E3DE0B4.idx  greeter_client.cpp.9F4E27809D4CF3A3.idx  greeter_server.cpp.7D67F3C97B992944.idx  greeter_service.cpp.07F9F098862308C9.idx  greeter_service.hpp.655C168C69787B51.idx  main.cpp.CC2B4B33946AE99F.idx
microservices/greeter_service/src/: main.cpp
protos/: echo_service.proto  greeter_service1.proto
protos/test/: greeter_service.proto
